RESOLVED FIXED 262108
WebProcess PlatformDisplay is not a member of WebCore
https://bugs.webkit.org/show_bug.cgi?id=262108
Summary WebProcess PlatformDisplay is not a member of WebCore
Thomas Devoogdt
Reported 2023-09-26 03:24:32 PDT
PlatformDisplay is not included if no EGL
Attachments
Michael Catanzaro
Comment 1 2023-09-26 08:50:56 PDT
Hi, when reporting compilation failures please include the full error message to show what is wrong, since otherwise nobody is going to be able to fix it. Also, consider submitting a pull request on GitHub because it's very unlikely that anybody else will fix this for you.
Thomas Devoogdt
Comment 2 2023-09-26 09:41:22 PDT
I've created this bug report because it's mandatory for pull requests. I've just forgot to mention the pull request here. https://github.com/WebKit/WebKit/pull/18219
EWS
Comment 3 2023-09-26 10:52:20 PDT
Committed 268462@main (e6c0acdd4edb): <https://commits.webkit.org/268462@main> Reviewed commits have been landed. Closing PR #18219 and removing active labels.
EWS
Comment 4 2023-09-26 11:24:10 PDT
Committed 266719.67@bugfix/WebProcess-2.42.0 (8d923e346157): <https://commits.webkit.org/266719.67@bugfix/WebProcess-2.42.0> Reviewed commits have been landed. Closing PR #18220 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.