WebProcess.h: fix PlatformDisplay is not a member of WebCore

https://bugs.webkit.org/show_bug.cgi?id=262108

Reviewed by Michael Catanzaro.

It's safe to include PlatformDisplay if no EGL, so drop this check.

Signed-off-by: Thomas Devoogdt <thomas.devoogdt@barco.com>
Canonical link: https://commits.webkit.org/266719.67@bugfix/WebProcess-2.42.0